# crypto-openharmony

./: .gitmodules  CHANGELOG.md  LICENSE  NOTICE  README.OpenSource  README.md  build-profile.json5  oh-package.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
crypto/: build-profile.json5  index.ets  oh-package.json5
crypto/src/main/: module.json5
crypto/src/main/cpp/: CMakeLists.txt  encrypt.cpp  encrypt.h  global_init.cpp  global_init.h  napi_init.cpp
crypto/src/main/cpp/types/libhmcrypto/: index.d.ts  oh-package.json5
crypto/src/main/cpp/utils/: hilog_helper.cpp  hilog_helper.h  napi_utils.cpp  napi_utils.h
crypto/src/main/ets/: Crypto.ts
entry/: oh-package.json5
entry/src/main/: module.json5
entry/src/main/ets/entryability/: EntryAbility.ts
entry/src/main/ets/pages/: Index.ets
entry/src/ohosTest/ets/test/: Ability.test.ets  List.test.ets
entry/src/ohosTest/ets/testability/: TestAbility.ets
